<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/city_detail"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/city_list"
            android:title="@string/all_city_title" />
        <item
            android:id="@+id/fovorit_city"
            android:title="@string/favorite_city_title" />
        <item
            android:id="@+id/current_location"
            android:title="@string/currentLocationTitle" />
        <item
            android:id="@+id/maps"
            android:title="@string/maps" />
        <item
            android:id="@+id/setting"
            android:title="@string/title_setting" />
    </group>
</menu>
